# OZ_Challenge

./: .gitignore
AWS/: day01.md  day02.md  day03.md  day04.md  day05.md
DB/: chapter01_06.ipynb  day2.sql  pyran.py
DB/airport/: README.md  pyproject.toml
DB/airport/src/airport/: airport2.py  dummy.py  dummy.yaml
DB/airport/src/airport/airport3/: airport3.py  config.yaml
Data/: day01.ipynb  day2.ipynb  pandas.ipynb
Django/day02/: pyproject.toml
Django/day02/addresses/: serializers.py  urls.py  views.py
Django/day02/boards/: admin.py  apps.py  models.py
Django/day02/boards/migrations/: 0004_board_user.py
Django/day02/config/: settings.py  urls.py
Django/day02/feeds/: admin.py
Django/day02/feeds/migrations/: 0001_initial.py
Django/day02/users/: admin.py  models.py  serializers.py  urls.py  views.py
Django/day02/users/migrations/: 0001_initial.py  0002_user_is_business.py  0005_remove_user_testcol.py
FastAPI/: Fastapi 등등.md
FastAPI/project_01/: app.py  pyproject.toml
GIT/: back.yaml  cs.yaml  front.yaml  fullstack.yaml  market.yaml  service.yaml
HTML_CSS/: chat.css  chat.html  form.html  profile.html
JS/: 01.html  01.js  02.html  02.js  03.html  03.js  admin.html
Linux/: linux_0113(문제).ipynb  linux_1426.ipynb
OS/: 01.py  02.py  process.md
Python/: Ch01.task.ipynb  Ch03_task.ipynb  Ch04_task(code).ipynb  Ch06_task.ipynb  Ch07_task.ipynb  Ch21-32Challenge_task.ipynb  Ch21-32task.ipynb  Chapter0508_과제(cs).ipynb  Chapter0508_과제.ipynb  Chapter0913_과제(cs).ipynb  Chapter0913_과제.ipynb  Chapter1416_과제.ipynb  Chapter1720_과제(cs).ipynb  (+2 more)
(+220 files in other folders)
