[tool.poetry]
name = "project-01"
version = "0.1.0"
description = ""
authors = ["rbwo552 <rbwo552@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
